<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/control_floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/control_layout_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/control_floating_button"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/control_floating_button_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:tint="@color/color_white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_not_favourite" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/color_white"
                android:elevation="@dimen/_3sdp"
                android:padding="@dimen/_3sdp"
                android:text="@string/favourite_file"
                android:textColor="@color/color_text_212121"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/control_floating_button_favourite"
                app:layout_constraintEnd_toStartOf="@+id/control_floating_button_favourite"
                app:layout_constraintTop_toTopOf="@+id/control_floating_button_favourite" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/control_floating_button_goto_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:tint="@color/color_white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/control_floating_button_favourite"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_goto_page" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/control_floating_text_goto_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/color_white"
                android:elevation="@dimen/_3sdp"
                android:padding="@dimen/_3sdp"
                android:text="@string/goto_page"
                android:visibility="gone"
                android:textColor="@color/color_text_212121"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/control_floating_button_goto_page"
                app:layout_constraintEnd_toStartOf="@+id/control_floating_button_goto_page"
                app:layout_constraintTop_toTopOf="@+id/control_floating_button_goto_page" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/control_floating_button_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:tint="@color/color_white"
                app:layout_constraintBottom_toTopOf="@+id/control_floating_button_goto_page"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_share" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/color_white"
                android:elevation="@dimen/_3sdp"
                android:padding="@dimen/_3sdp"
                android:text="@string/share"
                android:textColor="@color/color_text_212121"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/control_floating_button_share"
                app:layout_constraintEnd_toStartOf="@+id/control_floating_button_share"
                app:layout_constraintTop_toTopOf="@+id/control_floating_button_share" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/control_floating_button_screen_short"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:tint="@color/color_white"
                app:layout_constraintBottom_toTopOf="@+id/control_floating_button_share"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_screen_short" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/color_white"
                android:elevation="@dimen/_3sdp"
                android:padding="@dimen/_3sdp"
                android:text="@string/screen_shot"
                android:textColor="@color/color_text_212121"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/control_floating_button_screen_short"
                app:layout_constraintEnd_toStartOf="@+id/control_floating_button_screen_short"
                app:layout_constraintTop_toTopOf="@+id/control_floating_button_screen_short" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>